--- a/HolaUsuario/app/src/main/res/layout/activity_frmmensaje.xml
+++ b/HolaUsuario/app/src/main/res/layout/activity_frmmensaje.xml
@@ -2,12 +2,13 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/images">
 
     <TextView
         android:id="@+id/TxtMensaje"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:text="$mensaje"/>
+        android:layout_width="174dp"
+        android:layout_height="147dp"
+        android:text="$mensaje" />
 </LinearLayout>
