--- a/HolaUsuario/app/src/main/res/layout/activity_main.xml
+++ b/HolaUsuario/app/src/main/res/layout/activity_main.xml
@@ -4,47 +4,56 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="fill_parent"
+    android:background="@drawable/images">
 
     <TextView
         android:id="@+id/nombre"
-        android:text="@string/texto"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
+        android:text="@string/texto"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF" />
 
     <EditText
         android:id="@+id/TxtNombre"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:hint="Nombre" />
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:hint="Nombre"
+        android:textColorHint="#FFFFFF" />
 
 
     <EditText
         android:id="@+id/TxtApellidos"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:hint="Apellidos" />
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:hint="Apellidos"
+        android:textColorHint="#FFFFFF" />
 
     <EditText
-    android:id="@+id/TxtDNI"
-    android:layout_width="wrap_content"
-    android:layout_height="fill_parent"
-    android:hint="DNI" />
+        android:id="@+id/TxtDNI"
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:hint="DNI"
+        android:textColorHint="#FFFFFF" />
 
     <EditText
         android:id="@+id/TxtDireccion"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:hint="Direccion" />
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:hint="Direccion"
+        android:textColorHint="#FFFFFF" />
+
     <EditText
         android:id="@+id/TxtTelefono"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:hint="Telefono" />
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:hint="Telefono"
+        android:textColorHint="#FBFBFB" />
 
     <Button
         android:id="@+id/BtnHola"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hola" />
+        android:text="Okay" />
 </LinearLayout>
